2012-04-20  Kikuchi Koichiro  <koichiro@rworks.jp>

	* extensions/update_manager.php,
	  extensions/update_manager/sql/update_manager.sql,
	  extensions/update_manager/sql/update_manager.postgreSQL.sql,
	  extensions/update_manager/sql/update_manager.oracle.sql,
	  extensions/update_manager/lib/libupdate_manager_client.php,
	  extensions/update_manager/lib/libupdate_manager.php,
	  include/db/postgresql.php,
	  include/db/oracle.php,
	  include/db/mysql.php,
	  include/functions_config.php,
	  include/config_process.php,
	  include/functions_db.php: Now pandora_console support DB
	 running on non-standard port.

2012-04-19  Sancho Lerena <slerena@artica.es>

	* operation/agentes/estado_monitores.php: Put units in module view. 
	Fixed a Postgrest missing ")" in SQL.

	* operation/agentes/status_monitor.php: Put units in module view.

	* operation/agentes/alerts_status.php: better layout on alert 
	tabular view, now using dynamic width.

2012-04-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/gis_maps/render_view.php: Resize GIS map on normal view.
	
	Bugfix merged from branches.

2012-04-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/gis_maps/render_view.php: Resize GIS map on fullscreen.
	
	Bugfix merged from branches.

2012-04-19  Vanessa Gil  <vanessa.gil@artica.es>

	* pandoradb.data.oracle.sql
	  pandoradb.data.postgreSQL.sql
	  include/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  include/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  include/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Added
	table 'ttimezone' and data.

2012-04-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_config.php: Added check for update manager in 
	the config process.
	
2012-04-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/update_license_info.php: Delete innecesary extension.

2012-04-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/skin/skin_default/include/styles/pandora.css: Modified 