@@ -1,3 +1,8 @@
+2012-04-20  Vanessa Gil  <vanessa.gil@artica.es>
+
+	* godmode/alerts/alert_list.builder.php: Fixed bug: In tab alert
+	within agent detail, the actions depends on the template.
+
 2012-04-20  Kikuchi Koichiro  <koichiro@rworks.jp>
 
 	* extensions/update_manager.php,
